# OOTPISP-2024

./: README.md
trunk/po0_220220/task_01/src/: Exam.cpp
trunk/po0_220223/: readme.md
trunk/po0_220223/src/: ооотсис1
trunk/po0_220223/task_01/: readme.md
trunk/po0_220223/task_01/src/: CMakeLists.txt  Tovarka.h  main.cpp  tovar.cpp
trunk/po0_220223/task_03/: readme.md
trunk/po0_220223/task_04/src/: Money.cpp  Money.h  Vvector.h  main.cpp
trunk/po0_220223/task_05/: readme.md
trunk/po0_220223/task_05/src/: CMakeLists.tx  CMakeLists.txt  Money.cpp  Money.h  VectorOnPriority.h  Vvector.h  main.cpp
